--- a/dashboard/templates/dashboards/layout.html
+++ b/dashboard/templates/dashboards/layout.html
@@ -43,17 +43,10 @@
             <div class="col-sm">
                 <form>
                     <div class="form-group">
-                      <label for="exampleInputEmail1">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                      <input type="location" class="form-control" id="InputLocation" aria-describedby="emailHelp" placeholder="Enter your current address">
                     </div>
                     <div class="form-group">
-                      <label for="exampleInputPassword1">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                    </div>
-                    <div class="form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                      <input type="address" class="form-control" id="AirportAddress" placeholder="Destination airport address">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
@@ -65,7 +58,19 @@
 
 
     </div>
-
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function () {
+        $("#inputOrigin").autocomplete({
+            source: "{% url 'origin_airport_search'%}",
+            minLength: 1,
+            delay: 200,
+        });
+    });
+</script>
 
 </body>
 
