--- a/login/templates/login/layout.html
+++ b/login/templates/login/layout.html
@@ -1,4 +1,58 @@
 {% extends "login/index.html" %}
+{% load static %}
 {% block content %}
-<h1>Testing</h1>
+<style>
+    #myVideo {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        min-width: 100%;
+        min-height: 90%;
+        z-index: -1;
+    }
+
+    .content {
+        position: fixed;
+        bottom: 0;
+        background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3));
+        width: 100%;
+        height: 92.6%;
+        padding: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .content h1,
+    p {
+        color: white;
+    }
+
+    /* Style the button used to pause/play the video */
+    #myBtn {
+        width: 200px;
+        font-size: 18px;
+        padding: 10px;
+        border: none;
+        background: #000;
+        color: #fff;
+        cursor: pointer;
+    }
+
+    #myBtn:hover {
+        background: #ddd;
+        color: black;
+    }
+</style>
+<video autoplay muted loop id="myVideo">
+    <source src="{% static 'login/clouds.mp4' %}" type="video/mp4">
+</video>
+<div class="content">
+    <h1>WELCOME TO CAIRFREE</h1>
+    <p>Ease your travel experience with the assistance of cAirFree <br />We provide a flight time estimator and general
+        information that revolves around your flight </p>
+    <button id="myBtn">Get Started</button>
+</div>
 {% endblock content %}
